Update image paths to relative URLs

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <!-------------------------------- About -------------------------------->
         <section class="about">
             <div class="content">
-                <img src="/images/decor.svg" alt="decor">
+                <img src="./images/decor.svg" alt="decor">
                 <p>ABOUT</p>
-                <img src="/images/decor.svg" alt="decor">
+                <img src="./images/decor.svg" alt="decor">
             </div>
             <div class="data">
                 This website is designed as a simple and user-friendly
@@ -77,18 +77,18 @@
         <!-- Members -->
         <section class="members">
             <div class="content">
-                <img src="/images/decor.svg" alt="decor">
+                <img src="./images/decor.svg" alt="decor">
                 <p>FOUNDERS</p>
-                <img src="/images/decor.svg" alt="decor">
+                <img src="./images/decor.svg" alt="decor">
             </div>
             <div class="profiles">
                 <div class="profile-data">
-                    <img src="/images/abdullah.jpg" alt="abdullah">
+                    <img src="./images/abdullah.jpg" alt="abdullah">
                     <span>Abdullah Aziz</span>
                     <span>01-135252-006</span>
                 </div>
                 <div class="profile-data">
-                    <img src="/images/shahyan.jpg" alt="shahyan">
+                    <img src="./images/shahyan.jpg" alt="shahyan">
                     <span>Shahyan Haider</span>
                     <span>01-135252-077</span>
                 </div>
