--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,8 +8,8 @@
         <link rel="shortcut icon" href="/images/favicon.svg"
             type="image/x-icon">
         <!-- Css -->
-        <link rel="stylesheet" href="/css/contact.css">
-        <link rel="stylesheet" href="/css/header-footer.css">
+        <link rel="stylesheet" href="../css/contact.css">
+        <link rel="stylesheet" href="../css/header-footer.css">
     </head>
     <body>
         <!-- Preloader -->
