--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,14 +21,14 @@
         <header class="home">
             <nav class="navbar">
                 <div class="logo">
-                    <img src="/images/logo.svg" alt="Desi Flames">
+                    <img src="../images/logo.svg" alt="Desi Flames">
                 </div>
                 <ul class="nav_items nav_links">
                     <div class="item">
-                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="../index.html">Home</a></li>
                         <li><a href="#menu">Menu</a></li>
-                        <li><a href="/pages/reviews.html">Reviews</a></li>
-                        <li><a href="/pages/contact.html">Contact</a></li>
+                        <li><a href="../pages/reviews.html">Reviews</a></li>
+                        <li><a href="../pages/contact.html">Contact</a></li>
                     </div>
                 </ul>
             </nav>
@@ -39,9 +39,9 @@
             <div class="sub-container">
                 <p class="wtu">Write To Us</p>
                 <div class="content">
-                    <img src="/images/decor.svg" alt="decor">
+                    <img src="../images/decor.svg" alt="decor">
                     <p class="contact">CONTACT US</p>
-                    <img src="/images/decor.svg" alt="decor">
+                    <img src="../images/decor.svg" alt="decor">
                 </div>
             </div>
             <div class="sub-container">
@@ -57,17 +57,17 @@
         <div class="sub-container">
             <p class="wtu">Book Your Table At</p>
             <div class="content">
-                <img src="/images/decor.svg" alt="decor">
+                <img src="../images/decor.svg" alt="decor">
                 <p class="contact">HAWKINS</p>
-                <img src="/images/decor.svg" alt="decor">
+                <img src="../images/decor.svg" alt="decor">
             </div>
         </div>
         <div class="sub-container">
-            <p><img class="icons" src="/images/location.svg">
+            <p><img class="icons" src="../images/location.svg">
                 Restraunt St.77, Hawkins 0653</p>
-            <p><img src="/images/time.svg" class="icons">10:00 am - 9:00 pm</p>
-            <p><img src="/images/call.svg" class="icons">+77 006053</p>
-            <p><img src="/images/mail.svg" class="icons">
+            <p><img src="../images/time.svg" class="icons">10:00 am - 9:00 pm</p>
+            <p><img src="../images/call.svg" class="icons">+77 006053</p>
+            <p><img src="../images/mail.svg" class="icons">
                 desiflames@restraunt.com</p>
         </div>
     </div>
@@ -76,18 +76,18 @@
         <div class="sub-container">
             <p class="wtu">Book Your Table At</p>
             <div class="content">
-                <img src="/images/decor.svg" alt="decor">
+                <img src="../images/decor.svg" alt="decor">
                 <p class="contact">GOTHAM</p>
-                <img src="/images/decor.svg" alt="decor">
+                <img src="../images/decor.svg" alt="decor">
             </div>
         </div>
         <div class="sub-container">
-            <p> <img class="icons" src="/images/location.svg">
+            <p> <img class="icons" src="../images/location.svg">
                 Block-06, 7753 Restraunt St, Gotham </p>
-            <p><img src="/images/time.svg" class="icons">24/7</p>
-            <p><img src="/images/call.svg" class="icons">
+            <p><img src="../images/time.svg" class="icons">24/7</p>
+            <p><img src="../images/call.svg" class="icons">
                 +53 77006 </p>
-            <p><img src="/images/mail.svg" class="icons">
+            <p><img src="../images/mail.svg" class="icons">
                 desiflames@restraunt.com</p>
         </div>
     </div>
@@ -123,7 +123,7 @@
             <div class="sec footer-container">
                 <div class="footer-col">
                     <div class="footer-logo logo">
-                        <img src="/images/logo.svg" alt="logo">
+                        <img src="../images/logo.svg" alt="logo">
                     </div>
                     <p class="footer-text">
                         Let us take you on a tasty tour at the best restaurant
@@ -139,12 +139,12 @@
                 <div class="footer-col">
                     <h4>Links</h4>
                     <ul class="footer-links">
-                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="../index.html">Home</a></li>
                         <li><a href="#menu">Menu</a></li>
-                        <li><a href="/pages/reviews.html">Reviews</a></li>
+                        <li><a href="../pages/reviews.html">Reviews</a></li>
                         <li><a
-                                href="/pages/reservation.html">Reservations</a></li>
-                        <li><a href="/pages/contact.html">Contact</a></li>
+                                href="../pages/reservation.html">Reservations</a></li>
+                        <li><a href="../pages/contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="seprator"></div>
@@ -152,11 +152,11 @@
                     <h4>Address</h4>
                     <h5>Hawkins</h5>
                     <p>
-                        <img class="icons" src="/images/location.svg">
+                        <img class="icons" src="../images/location.svg">
                         Restraunt St.77, Hawkins 0653</p>
 
                     <h5>Gotham</h5>
-                    <p><img class="icons" src="/images/location.svg">
+                    <p><img class="icons" src="../images/location.svg">
                         Block-06, 7753 Restraunt St, Gotham</p>
 
                 </div>
@@ -164,8 +164,8 @@
                 <div class="footer-col">
                     <h4>Contact</h4>
                     <ul class="footer-links footer-contacts">
-                        <li><img src="/images/call.svg" class="icons">+77 006053</li>
-                        <li><img src="/images/mail.svg" class="icons">desiflames@restraunt.com</li>
+                        <li><img src="../images/call.svg" class="icons">+77 006053</li>
+                        <li><img src="../images/mail.svg" class="icons">desiflames@restraunt.com</li>
                     </ul>
                 </div>
             </div>
