--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Desi Flames | Contact</title>
         <!-- Favicon -->
-        <link rel="shortcut icon" href="/images/favicon.svg"
+        <link rel="shortcut icon" href="../images/favicon.svg"
             type="image/x-icon">
         <!-- Css -->
         <link rel="stylesheet" href="../css/contact.css">
