Changed the Title
The feedback looks good i guess so didn't changed but if you want to do any changes u sure do

--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Desi Flames | Contact</title>
+        <title>Desi Flames | Reviews</title>
         <!-- Favicon -->
         <link rel="shortcut icon" href="../images/favicon.svg"
             type="image/x-icon">
