Added Menus Path

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <ul class="nav_items nav_links">
                     <div class="item">
                         <li><a href="./index.html">Home</a></li>
-                        <li><a href="#menu">Menu</a></li>
+                        <li><a href="./pages/menu.html">Menu</a></li>
                         <li><a href="./pages/reviews.html">Reviews</a></li>
                         <li><a href="./pages/contact.html">Contact</a></li>
                     </div>
@@ -142,7 +142,7 @@
                     <h4>Links</h4>
                     <ul class="footer-links">
                         <li><a href="./index.html">Home</a></li>
-                        <li><a href>Menu</a></li>
+                        <li><a href="./pages/menu.html">Menu</a></li>
                         <li><a href="./pages/reviews.html">Reviews</a></li>
                         <li><a
                                 href="./pages/reservation.html">Reservations</a></li>
