Index Page Updated

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="sec footer-container">
                 <div class="footer-col">
                     <div class="footer-logo logo">
-                        <img src="/images/logo.svg" alt="logo">
+                        <img src="./images/logo.svg" alt="logo">
                     </div>
                     <p class="footer-text">
                         Let us take you on a tasty tour at the best restaurant
