Update link text  to 'Reviews'

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -97,7 +97,7 @@
                     <ul class="footer-links">
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../pages/menu.html">Menu</a></li>
-                        <li><a href="../pages/reviews.html">Our Chefs</a></li>
+                        <li><a href="../pages/reviews.html">Reviews</a></li>
                         <li><a
                                 href="../pages/reservation.html">Reservations</a></li>
                         <li><a href="../pages/contact.html">Contact</a></li>
