--- a/pages/menu.html
+++ b/pages/menu.html
@@ -94,7 +94,7 @@
 
             <!-- Stake & BBQ -->
             <div class="category" id="bbq" style="display:none;">
-                <h2>Stake & BBQ</h2>
+                <h2>Steak & BBQ</h2>
 
                 <div class="menu-grid">
                     <div class="menu-card">
