changed best selling items

--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -84,16 +84,16 @@
 
                         <tr>
                             <td>Chicken Nihari</td>
-                            <td><img src="../images/specials1.jpg"
-                                    alt="karahi"></td>
-                            <td>Rs. 1200</td>
+                            <td><img src="../images/kheer.jpg"
+                                    alt="kheer"></td>
+                            <td>Rs. 999</td>
                             <td>10k+</td>
                         </tr>
 
                         <tr>
-                            <td>Beef Handi</td>
-                            <td><img src="../images/handi.jpg" alt="handi"></td>
-                            <td>Rs. 1100</td>
+                            <td>Mutton Karahi</td>
+                            <td><img src="../images/muttonkarhai.jpg" alt="handi"></td>
+                            <td>Rs. 1700</td>
                             <td>9.8k+</td>
                         </tr>
                     </tbody>
