--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -83,7 +83,7 @@
                         </tr>
 
                         <tr>
-                            <td>Chicken Nihari</td>
+                            <td>kheer</td>
                             <td><img src="../images/kheer.jpg"
                                     alt="kheer"></td>
                             <td>Rs. 999</td>
