Add header-footer.css stylesheet link

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             type="image/x-icon">
         <!-- Css -->
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/header-footer.css">
 
     </head>
     <body>
