--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -1,9 +1,4 @@
-<!-- Success Msg -->
-<?php
-    if (isset($_GET['success']) && $_GET['success'] == 1) {
-        echo '<div id="success-msg" class="success-msg">Reservation Successful!</div>';
-    }
-?>
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -49,7 +44,7 @@
             </div>
 
             <!-- Form Start -->
-            <form class="data" action="../php/reservation.php" method="post">
+            <form class="data" action="#" method="post">
                 <div>
                     <label for="cn">Your Name</label>
                     <input type="text" name="costumername" id="cn" required>
