--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -6,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Desi Flames | Reservations</title>
         <!-- Favicon -->
-        <link rel="shortcut icon" href="../images/favicon.svg"
+        <link rel="shortcut icon" href="./images/favicon.svg"
             type="image/x-icon">
         <!-- Css -->
         <link rel="stylesheet" href="../css/reservation.css">
